jack重做修改密码界面，添加多个文件，更新样式

--- a/app/src/main/res/layout/activity_person_register.xml
+++ b/app/src/main/res/layout/activity_person_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    tools:context="person.jack.plant.activity.ResActivity">
+    tools:context="person.jack.plant.activity.PersonRegisterActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
