--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,4 +62,16 @@
 	<color name="gray_slate">#708090</color>
 	<color name="blue_light">#0083FF</color>
 
+	<!-- 输入框 -->
+	<color name="csy_bg_body">#ffe9e9e9</color>
+	<color name="csy_row_on">#fff0f0f0</color>
+	<color name="csy_border">#ffd0d0d0</color>
+	<color name="csy_green">#ff3caa0f</color>
+	<color name="csy_green_on">#ff28780a</color>
+	<color name="csy_blue">#ff0a7dd2</color>
+	<color name="csy_blue_on">#ff0a64aa</color>
+	<color name="csy_label">#ff969696</color>
+	<color name="csy_text">#ff555555</color>
+	<color name="csy_hint">#ffc6c6c6</color>
+
 </resources>
