--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -81,4 +81,20 @@
 	<dimen name="space_3">0.0dip</dimen>
 	<dimen name="space_2">2.0dip</dimen>
 	<dimen name="space_1">0.0dip</dimen>
+
+	<!-- 输入框 -->
+	<dimen name="csy_pd">10.0dp</dimen>
+	<dimen name="csy_mg">15.0dp</dimen>
+	<dimen name="csy_label_w">70.0dp</dimen>
+	<dimen name="csy_icon_w">40.0dp</dimen>
+	<dimen name="csy_row_h">64.0dp</dimen>
+	<dimen name="csy_item_h">52.0dp</dimen>
+	<dimen name="csy_tip_h">30.0dp</dimen>
+	<dimen name="csy_btn_h">46.0dp</dimen>
+
+	<dimen name="csy_label_ts">13.0sp</dimen>
+	<dimen name="csy_tip_ts">14.0sp</dimen>
+	<dimen name="csy_text_ts">16.0sp</dimen>
+	<dimen name="csy_title_ts">18.0sp</dimen>
+	<dimen name="space_50">50.0dip</dimen>
 </resources>
