--- a/app/src/main/res/layout/fragment_valueset.xml
+++ b/app/src/main/res/layout/fragment_valueset.xml
@@ -7,6 +7,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
+        android:background="@drawable/csy_form"
+        android:padding="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="20dp"
         >
 
 <LinearLayout
@@ -47,12 +52,8 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="温度阈值"
-            android:paddingLeft="15dp"
-
+            style="@style/csy_row_label"
             />
 
         <EditText
@@ -61,8 +62,9 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
-            android:inputType="numberSigned"
-
+            android:inputType="number"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/edit_back"
@@ -73,6 +75,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:inputType="number"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -87,11 +91,9 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/csy_row_label"
             android:text="湿度阈值"
-            android:paddingLeft="15dp"
+
             />
 
         <EditText
@@ -100,6 +102,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:inputType="number"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -111,6 +115,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:inputType="number"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -125,11 +131,9 @@
         >
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/csy_row_label"
             android:text="光照阈值"
-            android:paddingLeft="15dp"
+
             />
 
         <EditText
@@ -138,6 +142,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:inputType="number"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -149,6 +155,8 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:maxLines="1"
+            android:singleLine="true"
+            android:paddingLeft="5dp"
             android:inputType="number"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -272,22 +280,19 @@
             android:background="@drawable/edit_back"
             />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    </LinearLayout>
+    <Button
+
+        android:id="@+id/btn_save"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/csy_btn_h"
+        android:layout_below="@+id/cx_form"
+        android:layout_margin="@dimen/space_5"
+        android:background="@drawable/csy_btn"
         android:gravity="center"
-        android:layout_marginTop="20dp"
-        >
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="30dp"
-            android:id="@+id/btn_save"
-            android:text="保存"
-            android:textColor="#fff"
-            android:background="@drawable/btn_save_back"
+        android:text="确定"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/csy_text_ts"
 
-            />
-
-    </LinearLayout>
-    </LinearLayout>
+        />
 </LinearLayout>
