--- a/app/src/main/res/layout/fragment_warn.xml
+++ b/app/src/main/res/layout/fragment_warn.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/csy_form"
+        android:layout_margin="5dp"
+        >
 
 
     <LinearLayout
@@ -65,7 +74,9 @@
         android:id="@+id/waring_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
 
+
+        android:layout_weight="1"></ListView>
+    </LinearLayout>
 
 </LinearLayout>
