yanxu 修改详情信息布局

--- a/app/src/main/res/layout/fragment_plantadd.xml
+++ b/app/src/main/res/layout/fragment_plantadd.xml
@@ -1,128 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-
-
-    >
-
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
+    tools:context="person.jack.plant.activity.MainActivity">
     <ImageView
         android:id="@+id/img_PlantImg"
         android:layout_width="160dp"
         android:layout_height="130dp"
-        android:src="@drawable/default_image"
+        android:src="@drawable/plantlogo"
         android:layout_marginTop="50dp"
         android:background="@drawable/csy_form"
-        android:padding="5dp"
-        android:layout_gravity="center_horizontal"
+        android:padding="@dimen/space_5"
+        android:layout_centerHorizontal="true"
         />
+
+
+
+    <!-- 表单 -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/plant_add_form"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/csy_form"
+        android:layout_below="@id/img_PlantImg"
         android:layout_marginLeft="@dimen/space_5"
         android:layout_marginRight="@dimen/space_5"
         android:layout_marginTop="@dimen/csy_pd"
-        android:padding="@dimen/space_5"
+        android:background="@drawable/csy_form"
+        android:orientation="vertical"
+        android:padding="@dimen/space_5">
 
-        >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:visibility="gone"
-        >
+        <LinearLayout
+            style="@style/csy_row"
+            android:layout_height="@dimen/space_50">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="编        号"
-            android:layout_marginLeft="20dp"
-            />
-        <EditText
-            android:id="@+id/et_plantId"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:maxLines="1"
-            android:layout_marginLeft="40dp"
-            android:background="@drawable/edit_back"
-            />
-    </LinearLayout>
-    <LinearLayout
-        style="@style/csy_row"
-        android:layout_height="@dimen/space_50"
-        >
+            <TextView
+                style="@style/csy_row_label"
+                android:layout_width="100dp"
+                android:text="名    称" />
 
-        <TextView
-            style="@style/csy_row_label"
-            android:layout_width="100dp"
-            android:text="名       称" />
-        <EditText
-            android:id="@+id/et_plantName"
-            style="@style/csy_textbox"
-            android:layout_marginLeft="@dimen/space_8"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:hint="请输入植物名称"/>
-    </LinearLayout>
-    <LinearLayout
-        style="@style/csy_row"
-        android:layout_height="@dimen/space_50"
-        >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_50"
+                android:layout_gravity="center_vertical">
 
-        <TextView
-            style="@style/csy_row_label"
-            android:layout_width="100dp"
-            android:text="生长阶段"
+                <EditText
+                    android:id="@+id/et_plantName"
+                    style="@style/csy_textbox"
+                    android:layout_marginLeft="@dimen/space_8"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:hint="请输入植物名称"/>
 
-            />
-        <Spinner
-            android:id="@+id/spn_plantLive"
-            android:entries="@array/plant_live"
-            style="@style/csy_textbox"
-            android:layout_marginLeft="@dimen/space_8"
+            </RelativeLayout>
+        </LinearLayout>
 
-            />
-    </LinearLayout>
-    <LinearLayout
-        style="@style/csy_row"
-        android:layout_height="@dimen/space_50"
-        >
+        <LinearLayout
+            style="@style/csy_row1"
+            android:layout_height="@dimen/csy_btn_h">
 
-        <TextView
-            style="@style/csy_row_label"
-            android:layout_width="100dp"
-            android:text="种植日期"
-            />
-        <TextView
-            android:id="@+id/tv_plantDate"
-            style="@style/csy_textbox"
-            android:layout_marginLeft="@dimen/space_8"
+            <TextView
+                style="@style/csy_row_label"
+                android:layout_width="100dp"
+                android:text="生长阶段" />
 
-            />
-    </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/csy_tip_h"
+                android:layout_gravity="center_vertical">
 
+                <Spinner
+                    android:id="@+id/spn_plantLive"
+                    android:entries="@array/plant_live"
+                    style="@style/csy_textbox"
+                    android:layout_marginLeft="@dimen/space_8"
+
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/csy_row1"
+            android:layout_height="@dimen/csy_btn_h">
+
+            <TextView
+                style="@style/csy_row_label"
+                android:layout_width="100dp"
+                android:text="种植日期" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/csy_tip_h"
+                android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tv_plantDate"
+                    style="@style/csy_textbox"
+                    android:layout_marginLeft="@dimen/space_8"
+                    />
+
+            </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_plantSave"
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/csy_btn_h"
-            android:layout_below="@+id/cx_form"
-            android:layout_margin="@dimen/space_5"
-            android:background="@drawable/csy_btn"
-            android:gravity="center"
-            android:text="确定"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/csy_text_ts"
-            />
+    <Button
+        android:id="@+id/btn_plantSave"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/csy_btn_h"
+        android:layout_below="@+id/plant_add_form"
+        android:layout_margin="@dimen/space_5"
+        android:background="@drawable/csy_btn"
+        android:gravity="center"
+        android:text="确定"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/csy_text_ts"
+        />
 
-
-
-</LinearLayout>
+</RelativeLayout>
