--- a/app/src/main/res/layout/activity_plants_detail.xml
+++ b/app/src/main/res/layout/activity_plants_detail.xml
@@ -1,117 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context="person.jack.plant.activity.PlantsDetailActivity">
+    tools:context="person.jack.plant.activity.PlantsDetailActivity"
+    > <include layout="@layout/layout_main_header" />
 
-    <include layout="@layout/layout_main_header" />
-
-    <ScrollView
-        android:background="@color/gray_light"
+<ScrollView
+    android:background="@color/gray_light"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <ImageView
+            android:id="@+id/iv_plant"
+            android:scaleType="fitCenter"
+            android:background="@drawable/csy_form"
+            android:src="@drawable/default_image"
+            android:layout_width="180dp"
+            android:padding="5dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            />
+
+    <!-- 表单 -->
+    <LinearLayout
+        android:id="@+id/details_form1"
+        android:layout_width="fill_parent"
+        android:layout_below="@+id/iv_plant"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/space_5"
+        android:layout_marginRight="@dimen/space_5"
+        android:layout_marginTop="@dimen/csy_pd"
+        android:background="@drawable/csy_form"
+        android:orientation="vertical"
+        android:padding="@dimen/space_5">
 
         <LinearLayout
-            android:fitsSystemWindows="true"
+            style="@style/csy_row"
+            android:layout_height="@dimen/space_50">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_50"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    style="@style/csy_textbox"
+                    android:layout_marginLeft="@dimen/space_8"
+                    android:text="车矢菊"
+
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/csy_row1"
+            android:layout_height="@dimen/csy_btn_h">
+            <TextView
+                style="@style/csy_row_label"
+                android:layout_width="100dp"
+                android:text="种植时间" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/csy_tip_h"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    style="@style/csy_textbox"
+                    android:text="2018-03-02"
+
+                    android:layout_marginLeft="@dimen/space_8"  />
+            </RelativeLayout>
+        </LinearLayout>
+        <LinearLayout
+            style="@style/csy_row1"
+            android:layout_height="@dimen/csy_btn_h">
+
+            <TextView
+                style="@style/csy_row_label"
+                android:layout_width="100dp"
+                android:text="当前生长状态"
+                />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/csy_tip_h"
+                android:layout_gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tv_state"
+                    style="@style/csy_textbox"
+                    android:text="结果了"
+                    android:layout_marginLeft="@dimen/space_8"  />
+            </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+        <!--j结束-->
+        <!-- 表单 -->
+        <LinearLayout
+            android:id="@+id/details_form2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/details_form1"
+            android:layout_marginLeft="@dimen/space_5"
+            android:layout_marginRight="@dimen/space_5"
+            android:layout_marginTop="@dimen/csy_pd"
+            android:background="@drawable/csy_form"
+            android:orientation="vertical"
+            android:padding="@dimen/space_5">
+
+            <LinearLayout
+                style="@style/csy_row"
+                android:layout_height="@dimen/space_50">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/space_50"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+
+                        style="@style/csy_textbox"
+                        android:layout_marginLeft="@dimen/space_8"
+                        android:text="当前环境信息"
+
+                        />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/csy_row1"
+                android:layout_height="@dimen/csy_btn_h">
+                <TextView
+                    style="@style/csy_row_label"
+                    android:layout_width="100dp"
+                    android:text="温度：" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/csy_tip_h"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tv_detail_temp"
+                        style="@style/csy_textbox"
+                        android:text="15℃"
+                        android:layout_marginLeft="@dimen/space_8"  />
+                </RelativeLayout>
+            </LinearLayout>
+            <LinearLayout
+                style="@style/csy_row1"
+                android:layout_height="@dimen/csy_btn_h">
+
+                <TextView
+                    style="@style/csy_row_label"
+                    android:layout_width="100dp"
+                    android:text="湿度：" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/csy_tip_h"
+                    android:layout_gravity="center_vertical">
+                    <TextView
+                        android:id="@+id/tv_detail_hum"
+                        style="@style/csy_textbox"
+                        android:text="60%"
+                        android:layout_marginLeft="@dimen/space_8"  />
+                </RelativeLayout>
+            </LinearLayout>
+            <LinearLayout
+                style="@style/csy_row1"
+                android:layout_height="@dimen/csy_btn_h">
+
+
+                <TextView
+                    style="@style/csy_row_label"
+                    android:layout_width="100dp"
+                    android:text="光照强度：" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/csy_tip_h"
+                    android:layout_gravity="center_vertical">
+                    <TextView
+                        android:id="@+id/tv_detail_lig"
+                        style="@style/csy_textbox"
+                        android:text="1000"
+                        android:layout_marginLeft="@dimen/space_8"  />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <!--j结束-->
+        <WebView
+            android:id="@+id/web_view"
+android:layout_below="@id/details_form2"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/iv_plant"
-                    android:scaleType="fitCenter"
-                    android:background="@color/white"
-                    android:src="@drawable/default_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
+        </WebView>
 
-                <LinearLayout
-                    android:layout_marginTop="2dp"
-                    android:background="@color/white"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="15dp"
-                        android:textSize="20sp"
-                        android:id="@+id/tv_name"
-                        android:text="车矢菊"
-                        android:layout_width="match_parent"
-                        android:layout_height="25sp" />
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="15dp"
-                        android:textSize="18sp"
-                        android:id="@+id/tv_date"
-                        android:text="种植时间：2018-5-12"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp" />
-                    <TextView
-                        android:id="@+id/tv_state"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:textSize="18sp"
-                        android:text="当前状态：生长中"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_marginLeft="15dp"
-                    android:text="当前环境信息"
-                    android:textSize="20sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/tv_detail_temp"
-                    android:textSize="18sp"
-                    android:text="温度：15℃"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/tv_detail_hum"
-                    android:textSize="18sp"
-                    android:text="湿度：15"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/tv_detail_lig"
-                    android:textSize="18sp"
-                    android:text="光照强度：15"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <WebView
-                android:id="@+id/web_view"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></WebView>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</LinearLayout>
+    </RelativeLayout>
+</ScrollView>
+</RelativeLayout>
