--- a/app/src/main/res/layout/activity_plants_detail.xml
+++ b/app/src/main/res/layout/activity_plants_detail.xml
@@ -22,11 +22,11 @@
             android:scaleType="fitCenter"
             android:background="@drawable/csy_form"
             android:src="@drawable/default_image"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:padding="5dp"
             android:layout_centerHorizontal="true"
             android:layout_height="200dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             />
 
     <!-- 表单 -->
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/space_5"
         android:layout_marginRight="@dimen/space_5"
-        android:layout_marginTop="@dimen/csy_pd"
+
         android:background="@drawable/csy_form"
         android:orientation="vertical"
         android:padding="@dimen/space_5">
