--- a/app/src/main/res/layout/statistics_item_layout.xml
+++ b/app/src/main/res/layout/statistics_item_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="80dp">
 
         <ImageView
+            android:src="@drawable/default_image"
             android:id="@+id/item_pic"
             android:layout_width="80dp"
             android:layout_height="80dp"/>
